@@ -1,3 +1,8 @@
+2005-08-10  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/20646
+	* g++.dg/other/mult-stor1.C: New test.
+
 2005-08-09  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* gcc.c-torture/pr18299-1.c: Move to ...
